--- a/produk.html
+++ b/produk.html
@@ -37,7 +37,7 @@ scale=1.0">
         <img src="/nvl tik3.jpg" alt="nvl tik3" width="150"/>
         <h2>Seribu Wajah Ayah</h2>
         <p class="harga">Rp78.000</p>
-        <p class="deskripsi">Novel "Seribu Wajah Ayah" karya Nurun Ala </p> Seribu Wajah Ayah merupakan buku yang menggambarkan sosok ayah dari berbagai sudut pandang. Ayah digambarkan sebagai figur yang tegas, penuh tanggung jawab, dan sering menyimpan perasaan serta pengorbanannya sendiri. Buku ini mengajak pembaca memahami ayah sebagai manusia dengan kompleksitas emosi dan peran dalam keluarga.
+        <p class="deskripsi">Novel "Seribu Wajah Ayah" karya Nurun Ala  Seribu Wajah Ayah merupakan buku yang menggambarkan sosok ayah dari berbagai sudut pandang. Ayah digambarkan sebagai figur yang tegas, penuh tanggung jawab, dan sering menyimpan perasaan serta pengorbanannya sendiri. Buku ini mengajak pembaca memahami ayah sebagai manusia dengan kompleksitas emosi dan peran dalam keluarga.</p>
     
     </div>
 
@@ -48,4 +48,5 @@ scale=1.0">
         </body>
 
         </html> 
+
 
